Fixed: The issue of visible scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -14,3 +14,18 @@
 .dark{
     --background: #2a2929;
 }
+
+
+
+@layer utilities {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+    }
+  }
+
